Fix layout bug with IE

--- a/Survey/source/styles/_o-select-combobox.scss
+++ b/Survey/source/styles/_o-select-combobox.scss
@@ -11,6 +11,7 @@
         box-sizing: content-box;
         line-height: 40px;
         padding: 0 16px;
+        height: 40px;
     }
 
     input:focus-visible {
